--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -530,6 +530,8 @@
     }
 
     .cards-info {
+        position: relative;
+
         .card-template {
             padding: 15px;
             text-align: center;
@@ -725,6 +727,25 @@
             .displayFlex;
             .align-items(center);
             .justifyContet(center);
+        }
+
+        .share-btn {
+            position: absolute;
+            top: 0;
+            right: 0;
+            .displayFlex;
+            .align-items(center);
+            .justifyContet(center);
+            color: @buttonColorBlue;
+            font-weight: bold;
+            font-size: 16px;
+
+            md-icon {
+                width: 22px;
+                height: 22px;
+                margin-right: 4px;
+                fill: @buttonColorBlue;
+            }
         }
     }
 
