fixed small issue

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -1321,7 +1321,7 @@
             .justifyContet(space-between);
             flex-wrap: wrap;
 
-            button {
+            .share-button {
                 .displayFlex;
                 .align-items(center);
                 .justifyContet(center);
@@ -1331,6 +1331,7 @@
                 width: 100%;
                 max-width: ~"calc(50% - @{dialogPadding})";
                 font-size: 20px;
+                color: @textColorBlack;
 
                 @media(max-width: 600px) {
                     font-size: 16px;
