--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -792,35 +792,37 @@
                 }
             }
 
-            &.ng-hide-add, &.ng-hide-remove {
-                display: block !important;
-                animation-duration: 0.3s;
-                animation-timing-function: ease-out;
-                animation-iteration-count: 1;
-                position: absolute !important;
+            @media(min-width:600px) {
+                &.ng-hide-add, &.ng-hide-remove {
+                    display: block !important;
+                    animation-duration: 0.3s;
+                    animation-timing-function: ease-out;
+                    animation-iteration-count: 1;
+                    position: absolute !important;
 
-                ~ .buttons, ~ .keyboard {
-                    display: none;
+                    ~ .buttons, ~ .keyboard {
+                        display: none;
+                    }
+                    //.card-size();
                 }
-                //.card-size();
-            }
-            //.my-element.ng-hide-add-active,
-            &.ng-hide-add {
-                animation-name: cardNextOut;
+                //.my-element.ng-hide-add-active,
+                &.ng-hide-add {
+                    animation-name: cardNextOut;
 
-                &.backSlide {
-                    animation-name: cardPrevOut;
+                    &.backSlide {
+                        animation-name: cardPrevOut;
+                    }
+                    /* the transition is defined in the active class */
                 }
-                /* the transition is defined in the active class */
-            }
 
-            &.ng-hide-remove {
-                animation-name: cardNextIn;
+                &.ng-hide-remove {
+                    animation-name: cardNextIn;
 
-                &.backSlide {
-                    animation-name: cardPrevIn;
+                    &.backSlide {
+                        animation-name: cardPrevIn;
+                    }
+                    /* the transition is defined in the active class */
                 }
-                /* the transition is defined in the active class */
             }
 
             &.front .card-content, &.back .card-content {
