--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.less
@@ -1700,6 +1700,7 @@ iframe {
             background-repeat: no-repeat;
             background-position: 50%;
             max-width: 670px;
+            width: 100%;
             margin: 0 auto;
         }
     }
