--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -119,8 +119,10 @@
                 </button>
             </div>
             <md-button class="share-btn" ng-if="f.step==2" ng-click="f.share()">
-                <md-icon md-svg-icon="t:share"></md-icon>
-                <span>@UserResources.Share</span>
+                <div>
+                    <md-icon md-svg-icon="t:share"></md-icon>
+                    <span>@UserResources.Share</span>
+                </div>
             </md-button>
         </div>
     </div>
