--- a/Zbang.Cloudents.Mvc4WebRole/Views/Share/ShareDialog.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Share/ShareDialog.cshtml
@@ -10,16 +10,22 @@
         <span>@FlashcardResources.FlashcardShareSubtitle</span>
         <div class="share-options">
             <button class="twitter share-button" type="button" ng-click="sd.twitter()">
-                <md-icon md-svg-icon="s:twitter"></md-icon>
-                <div>Twitter</div>
+                <div>
+                    <md-icon md-svg-icon="s:twitter"></md-icon>
+                    <div>Twitter</div>
+                </div>
             </button>
             <button class="fb share-button" type="button" ng-click="sd.facebook()">
-                <md-icon md-svg-icon="b:facebook-colored"></md-icon>
-                <div>Facebook</div>
+                <div>
+                    <md-icon md-svg-icon="b:facebook-colored"></md-icon>
+                    <div>Facebook</div>
+                </div>
             </button>
             <a ng-href="{{::sd.whatappLink}}" target="_top" class="whatsapp share-button" ng-click="sd.whatapp()">
-                <md-icon md-svg-icon="b:whatsapp"></md-icon>
-                <div>Whatsapp</div>
+                <div>
+                    <md-icon md-svg-icon="b:whatsapp"></md-icon>
+                    <div>Whatsapp</div>
+                </div>
             </a>
         </div>
         <hr />
