--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -203,7 +203,7 @@ md-menu-item {
         padding-top: 90px;
 
         @media(min-width: 960px) {
-            padding-left: 95px;
+            //padding-left: 60px;
         }
     }
     //md-select:not([disabled]):focus .md-select-value {
@@ -344,8 +344,8 @@ md-menu-item {
     .iframeContent {
         border: 0;
         height: ~"calc(100vh - 175px)";
-        width: ~"calc(100% - 155px)";
-        max-width: 800px;
+        width: ~"calc(100% - 40px)";
+        max-width: 760px;
         background:#fff;
         @media (max-width: 600px) {
             width: ~"calc(100% - 20px)";
@@ -624,7 +624,7 @@ md-menu-item {
             -o-transform: rotate(0) /*rtl:rotate(180deg)*/;
             -webkit-transform: rotate(0) /*rtl:rotate(180deg)*/;
             transform: rotate(0) /*rtl:rotate(180deg)*/;
-            right: ~"calc(50% - 440px)";
+            right: ~"calc(50% - 400px)";
 
             @media(max-width: 960px) {
                 right: 5px;
@@ -637,7 +637,7 @@ md-menu-item {
             -o-transform: rotate(180deg) /*rtl:rotate(0)*/;
             -webkit-transform: rotate(180deg) /*rtl:rotate(0)*/;
             transform: rotate(180deg) /*rtl:rotate(0)*/;
-            left: ~"calc(50% - 450px)";
+            left: ~"calc(50% - 470px)";
 
             @media(max-width: 960px) {
                 left: 5px;
