Flashcard share and seo

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/_Head.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/_Head.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewBag.title = ViewBag.title ?? "Spitball";
     ViewBag.metaDescription = ViewBag.metaDescription ?? "Join the social studying revolution at Spitball";
-    ViewBag.fbImage = ViewBag.fbImage ?? @Url.CdnContent("/images/3rdParty/fbShare.png");
-    ViewBag.imageSrc = ViewBag.imageSrc ?? @Url.CdnContent("/images/3rdParty/fbShare.png");
+    ViewBag.fbImage = ViewBag.fbImage ?? Url.CdnContent("/images/3rdParty/fbShare.png");
+    ViewBag.imageSrc = ViewBag.imageSrc ?? Url.CdnContent("/images/3rdParty/fbShare.png");
     ViewBag.browserBackground = ViewBag.headerbackground ?? "#4190b9";
 }
 <meta charset="utf-8">
