Clean app controller

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/UserDetails.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/UserDetails.cshtml
@@ -40,7 +40,7 @@
                 </md-button>
             </md-menu-item>
             <md-menu-item class="user-menu-item">
-                <md-button ng-click="app.logOut()" target="_self" href="@Url.Action("logoff", "account")" ga-track-event="['header', 'logout']">
+                <md-button ng-click="ud.logOut()" target="_self" href="@Url.Action("logoff", "account")" ga-track-event="['header', 'logout']">
                     <md-icon md-menu-align-target md-svg-icon="t:logOffMenu"></md-icon>
                     @IndexResources.Logout
                 </md-button>
