--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/Password.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/Password.cshtml
@@ -22,7 +22,7 @@
                 </div>
             </md-input-container>
             <div class="text-right">
-                <button type="reset" class="cancel-btn" ng-click="app.resetForm(passwordForm)" ga-track-event="['password', 'cancel password changes']">@GeneralResources.Cancel</button>
+                <button type="reset" class="cancel-btn" ng-click="p.cancel(passwordForm)" ga-track-event="['password', 'cancel password changes']">@GeneralResources.Cancel</button>
                 <button type="submit" class="action-btn space-before" ng-disabled="!passwordForm.$valid" ga-track-event="['password', 'save password changes']">@GeneralResources.SaveChanges</button>
             </div>
         </form>
