Share pop up merge

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
@@ -36,7 +36,7 @@
     </md-tabs>
 </div>
 <div ui-view></div>
-<script defer type="text/ng-template" id="shareBoxTemplate.html">
+@*<script defer type="text/ng-template" id="shareBoxTemplate.html">
     <div class="share-section">
         <div class="share-options">
             <button type="button" class="share-btn share-fb" aria-label="share" ga-track-event="['box-feed', 'share']">
@@ -47,4 +47,4 @@
             </a>
         </div>
     </div>
-</script>
+</script>*@
