--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Feed.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Feed.cshtml
@@ -15,7 +15,7 @@
             </div>
             <div class="option-wrapper">
                 <input id="open-share" type="checkbox" user-not-register-popup="click" />
-                <label class="title" for="open-share" ng-click="b.settingsOpen = b.inviteOpen = false">
+                <label class="title" for="open-share" ng-click="b.share()">
                     <span class="wrapper" scroll-to-top>
                         <md-icon md-svg-icon="t:share" class="option-icon"></md-icon>
                         <span class="text">@UserResources.Share</span>
