--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Tabs.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Tabs.cshtml
@@ -40,7 +40,7 @@
                 <div class="counter">{{e.count}} @IndexResources.Items</div>
             </div>
         </li>
-        <li flex-gt-lg="10" flex-lg="20" flex-md="25" flex-sm="33" flex-xs="50" class="add-folder folder-name item-animate i-q-wrapper">
+        <li flex-gt-lg="10" flex-lg="20" flex-md="25" flex-sm="33" flex-xs="50" class="add-folder folder-name fade-in-repeat i-q-wrapper">
             <button type="button" ga-track-event="['box-Tabs', 'addFolder']" class="content" ng-if="!t.newFolderTabOpened" user-not-register-popup="click" ng-click="t.newFolderTabOpened = true">
                 <md-icon md-svg-icon="t:add"></md-icon>
                 <span>
