--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/infoDialog.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/infoDialog.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.User.Resources
 <md-dialog class="info-dialog">
-    <md-button aria-label="close" class="close" ng-click="hide()">
+    <md-button aria-label="close" class="close" ng-click="gd.hide()">
         <md-icon md-svg-icon="t:close"></md-icon>
     </md-button>
     <md-toolbar layout="row" layout-align="space-between center">
