--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -1340,7 +1340,7 @@
                 > div {
                     .displayFlex;
                     .align-items(center);
-                    .justifyContet(center);
+                    .justifyContet(flex-start);
                 }
 
                 @media(max-width: 600px) {
