--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
@@ -2,7 +2,7 @@
 @using Zbang.Cloudents.Mvc4WebRole.Views.Flashcard.Resources
 @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 
-<div class="ad" hide-xs>
+<div class="ad">
     <adsense ad-client="ca-pub-1215688692145777" ad-slot="4261002151" inline-style="display:block;" ad-format="auto"></adsense>
 </div>
 @*<div class="ad" data-ng-dfp-ad-container>
