started openMenu directive - not fully functional (the menu content appears outside of the element) + fixed small issue on item page

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
@@ -23,6 +23,7 @@ body.collapseHeader #main-nav {
   transform: translate(0, -65px);
 }
 body.collapseHeader .itemPage header {
+  z-index: 1;
   top: 0;
   left: 0;
   right: 0;
