--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -49,6 +49,7 @@ body {
         }
 
         .itemPage header {
+            z-index: 1;
             top: 0;
             right: 0;
             left: 0;
