--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
@@ -631,12 +631,19 @@
 }
 .flashcardPage .front .flip-container,
 .flashcardPage .back .flip-container {
+  -moz-perspective: 1000px;
+  -ms-perspective: 1000px;
+  -webkit-perspective: 1000px;
   perspective: 1000px;
   height: 100%;
 }
 .flashcardPage .front .flipper,
 .flashcardPage .back .flipper {
+  -moz-transition: 0.6s;
+  -o-transition: 0.6s;
+  -webkit-transition: 0.6s;
   transition: 0.6s;
+  -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   position: relative;
 }
@@ -653,15 +660,26 @@
 }
 .flashcardPage .front .front,
 .flashcardPage .back .front {
+  /*z-index: 2;
+            -moz-transform: rotateX(0deg) translateZ(1px);
+            -ms-transform: rotateX(0deg) translateZ(1px);
+            -o-transform: rotateX(0deg) translateZ(1px);
+            -webkit-transform: rotateX(0deg) translateZ(1px);
+            transform: rotateX(0deg) translateZ(1px);*/
   z-index: 2;
-  -moz-transform: rotateX(0deg) translateZ(1px);
-  -ms-transform: rotateX(0deg) translateZ(1px);
-  -o-transform: rotateX(0deg) translateZ(1px);
-  -webkit-transform: rotateX(0deg) translateZ(1px);
-  transform: rotateX(0deg) translateZ(1px);
+  -moz-transform: rotateX(0deg);
+  -ms-transform: rotateX(0deg);
+  -o-transform: rotateX(0deg);
+  -webkit-transform: rotateX(0deg);
+  transform: rotateX(0deg);
 }
 .flashcardPage .front .back,
 .flashcardPage .back .back {
+  /*-moz-transform: rotateX(-180deg) translateZ(1px);
+            -ms-transform: rotateX(-180deg) translateZ(1px);
+            -o-transform: rotateX(-180deg) translateZ(1px);
+            -webkit-transform: rotateX(-180deg) translateZ(1px);
+            transform: rotateX(-180deg) translateZ(1px);*/
   -moz-transform: rotateX(-180deg) translateZ(1px);
   -ms-transform: rotateX(-180deg) translateZ(1px);
   -o-transform: rotateX(-180deg) translateZ(1px);
@@ -707,7 +725,17 @@
   }
 }
 .flashcardPage .back .flip-container .flipper {
+  -moz-transform: rotateX(-180deg);
+  -o-transform: rotateX(-180deg);
+  -webkit-transform: rotateX(-180deg);
   transform: rotateX(-180deg);
+  -ms-transform: none;
+}
+.flashcardPage .back .flip-container .back {
+  -ms-transform: rotateX(0deg);
+}
+.flashcardPage .back .flip-container .front {
+  -ms-transform: rotateX(-180deg);
 }
 .flashcardPage .cards-info {
   position: relative;
