Gamification in dashboard done.

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_Gamification.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_Gamification.cshtml
@@ -25,7 +25,7 @@
         </div>
         <div class="badges">
             <div class="icon"></div>
-            <div class="description">{{::gb.data.badgesCount}} Badges</div>
+            <div class="description">{{::gb.data.badgeCount}} Badges</div>
         </div>
     </div>
 </div>
