--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
@@ -22,7 +22,6 @@
                 <button class="message" ng-if="!u.isUserProfile" ng-click="u.sendMessage()" user-not-register-popup="click">
                     <div class="content">
                         <md-icon md-svg-icon="t:chat"></md-icon>
-                        @*@Html.Svg("~/images/site/icons.svg", "chat")*@
                         <span>@UserResources.MessageButton</span>
                     </div>
                 </button>
@@ -72,246 +71,24 @@
                 </md-tab>
             </md-tabs>
             <div class="tab-content" ng-switch on="u.tab">
-                <div ng-switch-when="b" class="badges">
-                    <div class="badges-bar">
-                        <div class="info">
-                            <md-icon md-svg-icon="p:q-mark" class="" ng-click="u.showInfo()"></md-icon>
-                        </div>
-                        <md-tabs class="badges-tabs" md-dynamic-height="true">
-                            <md-tab md-on-select="u.changeBadgesTab(u.badgesState.levels)" md-active="u.badgesTab === u.badgesState.levels">
-                                <md-tab-label><h4>@GamificationResources.Levels</h4></md-tab-label>
-                            </md-tab>
-                            <md-tab md-on-select="u.changeBadgesTab(u.badgesState.badges)" md-active="u.badgesTab === u.badgesState.badges">
-                                <md-tab-label><h4>@GamificationResources.Badges</h4></md-tab-label>
-                            </md-tab>
-                            <md-tab md-on-select="u.changeBadgesTab(u.badgesState.community)" md-active="u.badgesTab === u.badgesState.community">
-                                <md-tab-label><h4>@GamificationResources.Community</h4></md-tab-label>
-                            </md-tab>
-                        </md-tabs>
-                    </div>
-                    <div class="badges-tab-content" ng-switch on="u.badgesTab">
-                        <div ng-switch-when="l" class="tab levels">
-                            <md-icon md-svg-icon="p:stars" class="bg"></md-icon>
-                            <ul>
-                                <li class="level">
-                                    <div class="title">
-                                        <div class="image"></div>
-                                        <div class="name">@GamificationResources.LevelFreshmanTitle</div>
-                                    </div>
-                                    <div class="body">
-                                        @GamificationResources.LevelFreshmanBody
-                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
-                                        <div class="counter">200,000 Students</div>
-                                    </div>
-                                </li>
-                                <li class="level">
-                                    <div class="title">
-                                        <div class="image"></div>
-                                        <div class="name">@GamificationResources.LevelSophomoreTitle</div>
-                                    </div>
-                                    <div class="body">
-                                        @GamificationResources.LevelSophomoreBody
-                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
-                                        <div class="counter">200,000 Students</div>
-                                    </div>
-                                </li>
-                                <li class="level">
-                                    <div class="title">
-                                        <div class="image"></div>
-                                        <div class="name">@GamificationResources.LevelUpperclassmanTitle</div>
-                                    </div>
-                                    <div class="body">
-                                        @GamificationResources.LevelUpperclassmanBody
-                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
-                                        <div class="counter">200,000 Students</div>
-                                    </div>
-                                </li>
-                                <li class="level">
-                                    <div class="title">
-                                        <div class="image"></div>
-                                        <div class="name">@GamificationResources.LevelStraightAStudentTitle</div>
-                                    </div>
-                                    <div class="body">
-                                        @GamificationResources.LevelStraightAStudentBody
-                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
-                                        <div class="counter">200,000 Students</div>
-                                    </div>
-                                </li>
-                                <li class="level">
-                                    <div class="title">
-                                        <div class="image"></div>
-                                        <div class="name">@GamificationResources.LevelScholarTitle</div>
-                                    </div>
-                                    <div class="body">
-                                        @GamificationResources.LevelScholarBody
-                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
-                                        <div class="counter">200,000 Students</div>
-                                    </div>
-                                </li>
-                                <li class="level">
-                                    <div class="title">
-                                        <div class="image"></div>
-                                        <div class="name">@GamificationResources.LevelProfessorTitle</div>
-                                    </div>
-                                    <div class="body">
-                                        @GamificationResources.LevelProfessorBody
-                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
-                                        <div class="counter">200,000 Students</div>
-                                    </div>
-                                </li>
-                                <li class="level">
-                                    <div class="title">
-                                        <div class="image"></div>
-                                        <div class="name">@GamificationResources.LevelPhDTitle</div>
-                                    </div>
-                                    <div class="body">
-                                        @GamificationResources.LevelPhDBody
-                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
-                                        <div class="counter">200,000 Students</div>
-                                    </div>
-                                </li>
-                                <li class="level">
-                                    <div class="title">
-                                        <div class="image"></div>
-                                        <div class="name">@GamificationResources.LevelEinsteinTitle</div>
-                                    </div>
-                                    <div class="body">
-                                        @GamificationResources.LevelEinsteinBody
-                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
-                                        <div class="counter">200,000 Students</div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div ng-switch-when="b" class="tab badges">
-                            <div class="badges-container" ng-if="!u.badgeInfo" layout="row" layout-padding layout-wrap>
-                                <div class="wrapper" flex-lg="20" flex-md="25" flex-gt-lg="20" flex-xs="50" flex-sm="25" ng-repeat="badge in u.badges">
-                                    <div class="badge-container" ng-click="u.showBadge(badge)">
-                                        <md-icon md-svg-icon="p:checkmark" ng-if="badge.progress === 100"></md-icon>
-                                        <div class="image"></div>
-                                        <div class="text">{{::badge.name}}</div>
-                                        <div class="progress">
-                                            <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="{{::badge.progress}}"></md-progress-linear>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div ng-if="u.badgeInfo" class="expanded">
-                                <div class="prev">
-                                    <md-icon ng-class="{disabled: !u.badgeInfo.prev}" ng-click="u.showBadge(u.badgeInfo.prev)" md-svg-icon="p:arrow-right"></md-icon>
-                                </div>
-                                <div class="badge-container">
-                                    <md-icon md-svg-icon="p:checkmark" ng-if="u.badgeInfo.data.progress === 100"></md-icon>
-                                    <div class="image"></div>
-                                    <div class="text">{{u.badgeInfo.data.name}}</div>
-                                    <div class="progress">
-                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="{{u.badgeInfo.data.progress}}"></md-progress-linear>
-                                    </div>
-                                    <div class="details">
-                                        <div class="condition">{{u.badgeInfo.data.condition}}</div>
-                                        <div class="points">+{{u.badgeInfo.data.points}} pts</div>
-                                    </div>
-                                </div>
-                                <div class="next">
-                                    <md-icon ng-class="{disabled: !u.badgeInfo.next}" ng-click="u.showBadge(u.badgeInfo.next)" md-svg-icon="p:arrow-right"></md-icon>
-                                </div>
-                                <md-icon class="close" md-svg-icon="t:close" ng-click="u.badgeInfo=false"></md-icon>
-                            </div>
-                        </div>
-                        <div ng-switch-when="c" class="tab community">
-                            <div class="top">
-                                <div class="bg-l"></div>
-                                <div class="bg-r"></div>
-                                <img class="title" src="~/Images/Site/Leaderborad-title.png" />
-                            </div>
-                            <div class="content">
-                                <div class="filters" layout="row" layout-padding layout-wrap>
-                                    <div class="filter-wrapper" flex-lg="20" flex-md="25" flex-gt-lg="20" flex-xs="50" flex-sm="25">
-                                        <md-input-container class="dates action-btn">
-                                            <md-select ng-model="u.communityFilter">
-                                                <md-option value="This Month">This Month</md-option>
-                                                <md-option value="Filter 1">Filter 1</md-option>
-                                                <md-option value="Filter 2">Filter 2</md-option>
-                                                <md-option value="Filter 3">Filter 3</md-option>
-                                            </md-select>
-                                        </md-input-container>
-                                    </div>
-                                    <div class="filter-wrapper" flex-lg="20" flex-md="25" flex-gt-lg="20" flex-xs="50" flex-sm="25">
-                                        <button type="button" class="action-btn">Show Myself</button>
-                                    </div>
-                                </div>
-                                <div class="users" layout="row" layout-padding layout-wrap>
-                                    <div class="user" flex-lg="20" flex-md="25" flex-gt-lg="20" flex-xs="50" flex-sm="25" ng-repeat="user in u.communityUsers | orderBy : '-points'" ng-class="{'top-user' : $index < 5}">
-                                        <div class="user-data">
-                                            <div class="img-wrapper">
-                                                <img src="{{user.image}}" />
-                                                <div class="rank">{{$index+1}}</div>
-                                            </div>
-                                            <div class="name ellipsis">{{user.name}}</div>
-                                            <div class="points">{{user.points}}</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+               @{
+                   Html.RenderPartial("Badges");
+                   Html.RenderPartial("Items");
+                   Html.RenderPartial("Feed");
+                   Html.RenderPartial("Quizzes");
+                   Html.RenderPartial("Members");
+               }
                 @*<div ng-switch-when="b">
                         <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="u.myPagingFunction()">
                             <div class="user-box" flex-xs="100" flex-xl="33" flex="33" flex-sm="50" flex-md="50" ng-repeat="e in u.boxes" ng-include="'box-template.html'"></div>
                         </div>
                     </div>*@
-                <div ng-switch-when="u">
-                    <div layout="row" layout-padding layout-fill layout-wrap srph-infinite-scroll="u.myPagingFunction()">
-                        <div flex-xs="50" flex-xl="15" flex="20" flex-sm="33" flex-md="33" class="file angular-animate fade-in-repeat i-q-wrapper" ng-repeat="e in u.files">
-                            <div ng-include="'item-template.html'"></div>
-                            <md-menu class="item-menu">
-                                <md-button aria-label="open menu" class="md-icon-button delete" ng-click="app.openMenu($mdOpenMenu, $event)" ga-track-event="['user-uploads', 'deleteFile']">
-                                    <md-icon md-svg-icon="t:ThreeDots" class="dots-3"></md-icon>
-                                    @*@Html.Svg("~/images/site/icons.svg", "ThreeDots", new {@class = "dots-3"})*@
-                                </md-button>
-                                <md-menu-content width="1">
-                                    <md-menu-item>
-                                        <md-button ng-href="{{::e.downloadLink}}" ng-click="u.downloadItem()" target="_blank" ga-track-event="['user-uploads', 'download']">
-                                            <span ng-if="e.type!=='Link'">@ItemsResources.Download</span>
-                                            <span ng-if="e.type==='Link'">@GeneralResources.View</span>
-                                        </md-button>
-                                    </md-menu-item>
-                                    <md-menu-item ng-if="u.isUserProfile">
-                                        <md-button ng-click="u.deleteItem($event,e)" ga-track-event="['box-items', 'didDelete']">
-                                            @GeneralResources.Delete
-                                        </md-button>
-                                    </md-menu-item>
-                                </md-menu-content>
-                            </md-menu>
-                        </div>
-                    </div>
-                </div>
-                <div ng-switch-when="p">
-                    <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="u.myPagingFunction()">
-                        <div flex="100" ng-repeat="e in u.feed" ng-include="'user-feed-template.html'"></div>
-                    </div>
-                </div>
-                <div ng-switch-when="q">
-                    <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="u.myPagingFunction()">
-                        <div flex-xs="50" flex-xl="15" flex="20" flex-sm="33" flex-md="33" ng-repeat="e in u.quiz" ng-include="'quiz-template.html'"></div>
-                    </div>
-                </div>
-                <div ng-switch-when="f">
-                    <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="u.myPagingFunction()">
-                        <div flex-xs="100" flex-xl="25" flex="50" flex-sm="100" flex-md="50" ng-repeat="e in u.friends" ng-include="'user-template.html'"></div>
-                    </div>
-                </div>
+               
+                
+               
+               
             </div>
         </div>
     </div>
 </div>
-<script type="text/ng-template" id="user-feed-template.html">
-    <a class="posts" href="{{::e.url}}">
-        <div>
-            <span class="post-headline" d-color="{{::e.boxName.length}}">{{::e.boxName}}</span>
-            <span class="post-content" ng-bind-html="::e.content | linky:'_blank'"></span>
-        </div>
-        <time-ago class="time-ago" from-time="{{::e.creationTime }}" format="mediumDate"></time-ago>
-    </a>
-</script>
+
